--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.2.12",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
+    "uuid": "^11.0.3",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
